--- a/app/views/psd-file-upload/refresh.html
+++ b/app/views/psd-file-upload/refresh.html
@@ -506,7 +506,7 @@
             
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
-                The image did not finish uploading - this may take several minutes or more. Refresh the image to confirm that the upload process was completed.  
+                The image did not finish uploading - this may take several minutes or more. Refresh the image to confirm that the upload process has completed.  
             </strong>
           </div>
 
