--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -42,7 +42,7 @@
                     </p>  
                     
                     <p class="govuk-body">
-                        The current examples (below) show forms referring to "<b>What is the concentration?</b>", but the user may choose the option to specify via "<b>percentages</b>". These will be identical forms (concentration substituted out for percentages). The second bullet point text at the start of each page will also be contextual.
+                        The current examples (below) show forms referring to "<b>What is the exact concentration?</b>", but the user may choose the option to specify via a "concentration <b>range</b>". These will be identical forms ('exact' substituted out for 'range'). The second bullet point text at the start of each page will also be contextual: either "exact" statement or the concentration ranges.
                     </p>
 
                     <p class="govuk-body">
@@ -54,7 +54,7 @@
                     </h1>                    
                     
                     <ul class="govuk-list govuk-list--bullet">
-                        <li>This journey is idential for two alternative journeys: concentration and percentages</li>
+                        <li>This journey is idential for two alternative journeys: exact concentrations and concentration ranges</li>
                         <li>Inserted into the current task flow, the user adds a new ingredient, page by page</li>
                         <li>But, when using this same mini-flow (within the tasks flow) when a user is <b>re-editing a draft</b> ... 
 
@@ -136,19 +136,25 @@
             <h2 class="govuk-heading-s">
                 Error pages
             </h2>
-
+            
             <p class="govuk-body-s">Pages showing the error summary and errors:</p>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-error1.html" target="_blank">Ingredient page</a> 
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-error1.html" target="_blank">Ingredient page - empty fields</a> 
                 </li>
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="#" target="_blank"></a> WIP  
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-error2.html" target="_blank">Ingredient page - unique name</a> <span class="govuk-!-font-size-16">(contextual: "product" or "item")</span> 
                 </li>
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="#" target="_blank"></a> WIP
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2d-add-error.html" target="_blank">Do you want to add an ingredient</a> <span class="govuk-!-font-size-16">(combining hint text "aria-describedby")</span>
+                </li>                
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2b-how-many-error.html" target="_blank">Do you want to add <b>another</b> ingredient</a>
                 </li>
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2c-remove-error.html" target="_blank">Do you want to remove this ingredient</a> <span class="govuk-!-font-size-16">(combining hint text "aria-describedby")</span>
+                </li>                
             </ul> 
         </div>         
 
