ingredients pages and updated index page

--- a/app/views/cosmetics-general/ingredient-2a-enter-ingredient-2.html
+++ b/app/views/cosmetics-general/ingredient-2a-enter-ingredient-2.html
@@ -32,7 +32,7 @@
 
       <form id="skip-to-form" action="ingredient-2b-how-many-2.html" novalidate>
         
-        <div class="govuk-form-group govuk-!-margin-bottom-9">  
+        <div class="govuk-form-group">  
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               Ingredient 2
