--- a/app/views/cosmetics-general/ingredient-2a-enter-ingredient-error1.html
+++ b/app/views/cosmetics-general/ingredient-2a-enter-ingredient-error1.html
@@ -50,7 +50,7 @@
 
       <form id="skip-to-form" action="#" novalidate>
         
-        <div class="govuk-form-group govuk-!-margin-bottom-9">  
+        <div class="govuk-form-group">  
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               Ingredient 5
@@ -70,7 +70,7 @@
               <div class="govuk-grid-column-one-half">
                 <div class="govuk-form-group govuk-form-group--error">
 
-                  <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the concentration?</label>
+                  <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the exact concentration?</label>
 
                   <p id="concentrate-input-error" class="govuk-error-message">
                     <span class="govuk-visually-hidden">Error:</span> Enter the concentration
