--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -33,6 +33,11 @@
                         Ingredients pages
                     </h1>
 
+                    <p class="govuk-body govuk-!-margin-top-6 govuk-!-padding-5 opss-border-all">
+                        FigJam diagram documenting the user journey for adding and editing ingredients: <br>
+                        <a class="govuk-link govuk-link--no-visited-state" href="https://www.figma.com/file/OzYtlSk8sXUulMQOWrkwOS/COS-new-ingredients-flow?node-id=0%3A1" target="_blank">Diagram(s) of user flows</a>
+                    </p>
+
                     <p class="govuk-body">
                         Here are the initial design concepts - not finalised - for the new ingredients pages (to be inserted into the current user journey within the new tasks bases pattern).
                     </p>
@@ -82,9 +87,11 @@
                 Main design(s)
             </h2>
 
+            <p class="govuk-body">These pages show the 'Concentrations' journey forms:</p>
+
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient" target="_blank">Add the ingredients form</a> <br><i>We insert this page into the standard tasks flow. There will be contextual text refering to the ingredients of this "product" or this "item". (After the first ingredient form page we add a Skip link). Select, Save and continue.</i>
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient" target="_blank">Add the ingredients form (concentrations)</a> <br><i>We insert this page into the standard tasks flow. There will be contextual text refering to the ingredients of this "product" or this "item". (After the first ingredient form page we add a Skip link). Select, Save and continue.</i>
 
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
@@ -100,6 +107,15 @@
                 </li>
 
             </ul> 
+
+            <p class="govuk-body">This page shows the 'Ranges' journey form design:</p>
+
+            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-b-enter-ingredient" target="_blank">Add the ingredients form (ranges)</a> <br><i>The 'Is it poisonous?' question is a required field.</i>
+                </li>
+            </ul>
+
         </div>
 
         <div class="govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8 opss-border-all">
@@ -154,7 +170,10 @@
                 </li>
                 <li>
                     <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2c-remove-error.html" target="_blank">Do you want to remove this ingredient</a> <span class="govuk-!-font-size-16">(combining hint text "aria-describedby")</span>
-                </li>                
+                </li>   
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-b-enter-ingredient-error.html" target="_blank">Add the ingredients form (ranges)</a>
+                </li>             
             </ul> 
         </div>         
 
