--- a/app/views/cosmetics-general/inc_key-ingredients-form.html
+++ b/app/views/cosmetics-general/inc_key-ingredients-form.html
@@ -5,7 +5,7 @@
   
   <!--div class="govuk-grid-row">
     <div class="govuk-grid-column-one-half">
-      <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-5">What is the concentration?</label>
+      <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-5">What is the exact concentration?</label>
       <div class="govuk-input__wrapper">
         <input class="govuk-input govuk-input--width-3" id="concentrate-5" name="concentrate-5" type="text" maxlength="3">
         <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt; w/w</span></div>
@@ -28,7 +28,7 @@
 
       <div class="govuk-form-group">
 
-        <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the concentration?</label>
+        <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the exact concentration?</label>
         <div class="govuk-input__wrapper">
           <input class="govuk-input govuk-input--width-3" id="concentrate-1" name="concentrate-1" type="text" maxlength="3">
           <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt; w/w</span></div>
