--- a/app/views/cosmetics-general/ingredient-1b-how-many.html
+++ b/app/views/cosmetics-general/ingredient-1b-how-many.html
@@ -24,7 +24,6 @@
         
       <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16 opss-secondary-text">
         <li>Use the International Nomenclature of Cosmetic Ingredients (<abbr>INCI</abbr>) name, where available</li>
-        <li>Provide the exact concentrations (&percnt; <span title="Weight by weight"><abbr>w</abbr>/<abbr>w</abbr></span>)</li>
         <li>Confirm if poisonous - especially if the details match ingredients listed in the following poison tables </li>
       </ul>
 
@@ -66,7 +65,7 @@
             
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-one-half">
-                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the concentration?</label>
+                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the exact concentration?</label>
                 <div class="govuk-input__wrapper">
                   <input class="govuk-input govuk-input--width-3" id="concentrate-1" name="concentrate-1" type="text" maxlength="3">
                   <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt; w/w</span></div>
@@ -118,7 +117,7 @@
             
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-one-half">
-                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-2">What is the concentration?</label>
+                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-2">What is the exact concentration?</label>
                 <div class="govuk-input__wrapper">
                   <input class="govuk-input govuk-input--width-3" id="concentrate-2" name="concentrate-2" type="text" maxlength="3">
                   <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt; w/w</span></div>
@@ -151,7 +150,7 @@
             
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-one-half">
-                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-3">What is the concentration?</label>
+                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-3">What is the exact concentration?</label>
                 <div class="govuk-input__wrapper">
                   <input class="govuk-input govuk-input--width-3" id="concentrate-3" name="concentrate-3" type="text" maxlength="3">
                   <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt; w/w</span></div>
@@ -171,7 +170,7 @@
           </fieldset>
         </div> 
 
-        <div class="govuk-form-group govuk-!-margin-bottom-9">  
+        <div class="govuk-form-group">  
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               Ingredient 4
@@ -184,7 +183,7 @@
             
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-one-half">
-                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-4">What is the concentration?</label>
+                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-4">What is the exact concentration?</label>
                 <div class="govuk-input__wrapper">
                   <input class="govuk-input govuk-input--width-3" id="concentrate-4" name="concentrate-4" type="text" maxlength="3">
                   <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt; w/w</span></div>
@@ -204,7 +203,7 @@
           </fieldset>
         </div>   
         
-        <div class="govuk-form-group govuk-!-margin-bottom-9">  
+        <div class="govuk-form-group">  
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               Ingredient 5
@@ -217,7 +216,7 @@
             
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-one-half">
-                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-5">What is the concentration?</label>
+                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-5">What is the exact concentration?</label>
                 <div class="govuk-input__wrapper">
                   <input class="govuk-input govuk-input--width-3" id="concentrate-5" name="concentrate-5" type="text" maxlength="3">
                   <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt; w/w</span></div>
@@ -237,7 +236,7 @@
           </fieldset>
         </div>    
         
-        <div class="govuk-form-group govuk-!-margin-bottom-9">  
+        <div class="govuk-form-group">  
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               Ingredient 6
@@ -250,7 +249,7 @@
             
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-one-half">
-                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-6">What is the concentration?</label>
+                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-6">What is the exact concentration?</label>
                 <div class="govuk-input__wrapper">
                   <input class="govuk-input govuk-input--width-3" id="concentrate-6" name="concentrate-6" type="text" maxlength="3">
                   <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt; w/w</span></div>
