--- a/app/views/cosmetics-general/ingredient-2a-enter-ingredient-3-link.html
+++ b/app/views/cosmetics-general/ingredient-2a-enter-ingredient-3-link.html
@@ -37,7 +37,6 @@
         
       <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16 opss-secondary-text">
         <li>Use the International Nomenclature of Cosmetic Ingredients (<abbr>INCI</abbr>) name, where available</li>
-        <li>Provide the exact concentrations (&percnt; <span title="Weight by weight"><abbr>w</abbr>/<abbr>w</abbr></span>)</li>
         <li>Confirm if poisonous - especially if the details match ingredients listed in the following poison tables </li>
       </ul>
 
@@ -49,7 +48,7 @@
 
       <form id="skip-to-form" action="#" novalidate>
         
-        <div class="govuk-form-group govuk-!-margin-bottom-9">  
+        <div class="govuk-form-group">  
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               Ingredient 3
@@ -65,7 +64,7 @@
 
                 <div class="govuk-form-group">
 
-                  <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the concentration?</label>
+                  <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the exact concentration?</label>
                   <div class="govuk-input__wrapper">
                     <input class="govuk-input govuk-input--width-3" id="concentrate-1" name="concentrate-1" type="text" maxlength="3" value="60">
                     <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt; w/w</span></div>
