--- a/app/views/cosmetics-general/ingredient-2a-enter-ingredient-error2.html
+++ b/app/views/cosmetics-general/ingredient-2a-enter-ingredient-error2.html
@@ -47,7 +47,7 @@
 
       <form id="skip-to-form" action="#" novalidate>
         
-        <div class="govuk-form-group govuk-!-margin-bottom-9">  
+        <div class="govuk-form-group">  
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               Ingredient 5
@@ -67,7 +67,7 @@
               <div class="govuk-grid-column-one-half">
                 <div class="govuk-form-group">
 
-                  <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the concentration?</label>
+                  <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the exact concentration?</label>
 
                   <div class="govuk-input__wrapper">
                     <input class="govuk-input govuk-input--width-3" id="concentrate-1" name="concentrate-1" type="text" maxlength="3">
