--- a/app/views/cosmetics-general/ingredient-2a-b-enter-ingredient.html
+++ b/app/views/cosmetics-general/ingredient-2a-b-enter-ingredient.html
@@ -93,7 +93,7 @@
                           <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="range-1" name="range" type="radio" value="range-1">
                             <label class="govuk-label govuk-radios__label" for="range-1">
-                              above <span class="govuk-!-font-weight-bold">75&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">100&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
+                              above <span class="govuk-!-font-weight-bold">75&percnt;</span> <abbr class="govuk-!-font-size-16" title="Weight by weight">w/w</abbr> up to <span class="govuk-!-font-weight-bold">100&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
                             </label>
                           </div>
                           <div class="govuk-radios__item">
