--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -173,6 +173,13 @@
                 </li>   
                 <li>
                     <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-b-enter-ingredient-error.html" target="_blank">Add the ingredients form (ranges)</a>
+
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>Enter a name</li>
+                        <li>Select yes if it is poisonous</li>
+                        <li>Enter the exact concentration</li>
+                        <li>Select a concentration range</li>
+                    </ul>
                 </li>             
             </ul> 
         </div>         
