--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a.html
@@ -383,6 +383,8 @@
           <div class="govuk-button-group">
               <a href="pg-accept-and-submit-2.html" class="govuk-button">Continue</button>
 
+                <span class="govuk-visually-hidden">|</span>
+
               <a href="#" class="govuk-link govuk-link--no-visited-state">Cancel</a>
           </div>
         </section>
