--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -182,7 +182,35 @@
                     </ul>
                 </li>             
             </ul> 
-        </div>         
+        </div>    
+        
+        <div class="govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8 opss-border-all">
+            <h2 class="govuk-heading-s">
+                Notified products pages for SUBMIT &amp; SEARCH
+            </h2>
+            
+            <p class="govuk-body-s">Ingredients use own title - examples here show every scenario of <abbr>HTML</abbr> to use in situ:</p>
+
+            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-notification-submit-1.html" target="_blank">Notified products example page (using items)</a> 
+                </li>
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-notification-submit-2.html" target="_blank">Notified products example page (single product item)</a>  WIP
+                </li>                
+            </ul> 
+
+            <p class="govuk-body-s">Lists of differing scenarios ingredients can be presented:</p>
+
+
+                <ul class="govuk-list govuk-list--bullet">
+                <li>Formulation. Ends.</li>
+                <li>Formulation + poisonous ingredients as exact concentrations. Ends.</li>
+                <li>Ingredients listed as exact concentrations. Ends.</li>
+                <li>Ingredients listed as concentration ranges. Ends.</li>
+                <li>Ingredients listed as concentration ranges + poisonous ingredients as exact concentrations. Ends.</li>
+                </ul>
+        </div>           
 
         <div class="govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8 opss-border-all" style="background-color: #eee;">
             <p class="govuk-body strike">
