--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -196,7 +196,7 @@
                     <a class="govuk-link govuk-link--no-visited-state" href="ingredient-notification-submit-1.html" target="_blank">Notified products example page (using items)</a> 
                 </li>
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-notification-submit-2.html" target="_blank">Notified products example page (single product item)</a>  WIP
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-notification-submit-2.html" target="_blank">Notified products example page (single product item)</a>  <b>WIP</b>
                 </li>                
             </ul> 
 
