--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -208,7 +208,7 @@
                 <li>Formulation + poisonous ingredients as exact concentrations. Ends.</li>
                 <li>Ingredients listed as exact concentrations. Ends.</li>
                 <li>Ingredients listed as concentration ranges. Ends.</li>
-                <li>Ingredients listed as concentration ranges + poisonous ingredients as exact concentrations. Ends. ...</li>
+                <li>Ingredients listed as concentration ranges + poisonous ingredients as exact concentrations. Ends. ......</li>
                 </ul>
         </div>           
 
